example/service-with-tls-ingress.yaml
# Heres the cert requested
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-test-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`timbrook.dev`)
      services:
        - kind: Service
          name: web-test
          port: 80
  tls:
    secretName: timbrook-dot-dev-tls
    domains:
      - main: timbrook.dev
---
kind: Service
apiVersion: v1
metadata:
  name: web-test
spec:
  selector:
    app: web-test
  type: ClusterIP
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-test
  template:
    metadata:
      labels:
        app: web-test
    spec:
      containers:
        - name: web-test
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
              name: http
